--- a/app/src/main/res/layout/activity_primary_user_login.xml
+++ b/app/src/main/res/layout/activity_primary_user_login.xml
@@ -121,7 +121,7 @@
                                 android:textAlignment="center"
                                 android:textStyle="bold"
                                 android:textColor="@color/color2"
-                                android:text="Don\'t have an account? Sign Up"
+                                android:text="Don\'t have an account? Create one!"
                                 android:layout_marginTop="@dimen/loginViewsMargin"/>
 
 
